--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Hello, Droid</string>
     <string name="name">name</string>
+    <string name="digite_nome">Digite seu nome</string>
+    <string name="enviar">Enviar</string>
 </resources>
